minor bug fixes; doc updates merged in lam's DB patch